Switched back to Java 7.

--- a/unicode-grid-vaadin-ui/src/main/webapp/VAADIN/themes/mytheme/mytheme.scss
+++ b/unicode-grid-vaadin-ui/src/main/webapp/VAADIN/themes/mytheme/mytheme.scss
@@ -71,5 +71,10 @@
     td.code {
         font-family: monospace;
         font-size: 15px;
+        text-overflow: clip;
+    }
+
+    td.idx {
+        text-overflow: clip;
     }
 }
